--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Examples of how to access jet collections in miniAOD samples\n",
+    "### Examples of how to access jet collections in miniAOD samples\n",
     "\n",
     "Below are two examples of how to access jet collections from these samples. This exercise does not intend for you to modify code in order to access these collections, but rather for you to look at the code and get an idea about how you could access this information if needed."
    ]
@@ -82,168 +82,12 @@
    "source": [
     "##### In C++\n",
     "\n",
-    "If you are on the terminal, please take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/src/jmedas_miniAODAnalyzer.C`.  The same code can be seen by clicking in the link below:\n",
-    "\n",
-    "<details>\n",
-    "    <summary><font color='blue'>SHOW CODE</font></summary>\n",
-    "<p>\n",
-    "\n",
-    "In C++ you need to create a .C file inside the `src` directory. \n",
-    "    \n",
-    "```C\n",
-    "// system include files\n",
-    "#include <memory>\n",
-    "#include <vector>\n",
-    "\n",
-    "// user include files\n",
-    "#include \"FWCore/Framework/interface/Frameworkfwd.h\"\n",
-    "#include \"FWCore/Framework/interface/EDAnalyzer.h\"\n",
-    "\n",
-    "#include \"FWCore/Framework/interface/Event.h\"\n",
-    "#include \"FWCore/Framework/interface/MakerMacros.h\"\n",
-    "\n",
-    "#include \"FWCore/ParameterSet/interface/ParameterSet.h\"\n",
-    "\n",
-    "#include \"DataFormats/VertexReco/interface/VertexFwd.h\"\n",
-    "#include \"DataFormats/VertexReco/interface/Vertex.h\"\n",
-    "#include \"DataFormats/PatCandidates/interface/Jet.h\"\n",
-    "#include \"DataFormats/PatCandidates/interface/PackedCandidate.h\"\n",
-    "//\n",
-    "// class declaration\n",
-    "//\n",
-    "using namespace std;\n",
-    "\n",
-    "class MiniAnalyzer : public edm::EDAnalyzer {\n",
-    "   public:\n",
-    "      explicit MiniAnalyzer (const edm::ParameterSet&);\n",
-    "      ~MiniAnalyzer();\n",
-    "\n",
-    "   private:\n",
-    "      virtual void analyze(const edm::Event&, const edm::EventSetup&) override;\n",
-    "\n",
-    "      // ----------member data ---------------------------\n",
-    "      edm::EDGetTokenT<vector<reco::Vertex>> vtxToken_;\n",
-    "      edm::EDGetTokenT<pat::JetCollection> jetToken_;\n",
-    "      edm::EDGetTokenT<pat::JetCollection> fatjetToken_;\n",
-    "\n",
-    "};\n",
-    "\n",
-    "MiniAnalyzer::MiniAnalyzer(const edm::ParameterSet& iConfig):\n",
-    "    vtxToken_(consumes<vector<reco::Vertex>>(iConfig.getParameter<edm::InputTag>(\"vertices\"))),\n",
-    "    jetToken_(consumes<pat::JetCollection>(iConfig.getParameter<edm::InputTag>(\"jets\"))),\n",
-    "    fatjetToken_(consumes<pat::JetCollection>(iConfig.getParameter<edm::InputTag>(\"fatjets\")))\n",
-    "{\n",
-    "}\n",
-    "\n",
-    "MiniAnalyzer::~MiniAnalyzer()\n",
-    "{\n",
-    "}\n",
-    "\n",
-    "void\n",
-    "MiniAnalyzer::analyze(const edm::Event& iEvent, const edm::EventSetup& iSetup)\n",
-    "{\n",
-    "\n",
-    "    edm::Handle<vector<reco::Vertex>> vertices;\n",
-    "    iEvent.getByToken(vtxToken_, vertices);\n",
-    "    if (vertices->empty()) return; // skip the event if no PV found\n",
-    "    const reco::Vertex &PV = vertices->front();\n",
-    "\n",
-    "    edm::Handle<pat::JetCollection> jets;\n",
-    "    iEvent.getByToken(jetToken_, jets);\n",
-    "    int ijet = 0;\n",
-    "    for (const pat::Jet &j : *jets) {\n",
-    "        if (j.pt() < 20) continue;\n",
-    "        printf(\"jet  with pt %5.1f (raw pt %5.1f), eta %+4.2f, btag CSV %.3f, CISV %.3f, pileup mva disc %+.2f\\n\",\n",
-    "            j.pt(), j.pt()*j.jecFactor(\"Uncorrected\"), j.eta(), std::max(0.f,j.bDiscriminator(\"combinedSecondaryVertexBJetTags\")), std::max(0.f,j.bDiscriminator(\"combinedInclusiveSecondaryVertexBJetTags\")), j.userFloat(\"pileupJetId:fullDiscriminant\"));\n",
-    "        if ((++ijet) == 1) { // for the first jet, lets print the leading constituents\n",
-    "            std::vector daus(j.daughterPtrVector());\n",
-    "            std::sort(daus.begin(), daus.end(), [](const reco::CandidatePtr &p1, const reco::CandidatePtr &p2) { return p1->pt() > p2->pt(); }); // the joys of C++11\n",
-    "            for (unsigned int i2 = 0, n = daus.size(); i2 < n && i2 <= 3; ++i2) {\n",
-    "                const pat::PackedCandidate &cand = dynamic_cast<const pat::PackedCandidate &>(*daus[i2]);\n",
-    "                printf(\"         constituent %3d: pt %6.2f, dz(pv) %+.3f, pdgId %+3d\\n\", i2,cand.pt(),cand.dz(PV.position()),cand.pdgId());\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "    edm::Handle<pat::JetCollection> fatjets;\n",
-    "    iEvent.getByToken(fatjetToken_, fatjets);\n",
-    "    for (const pat::Jet &j : *fatjets) {\n",
-    "        printf(\"AK8j with pt %5.1f (raw pt %5.1f), eta %+4.2f, mass %5.1f ungroomed, %5.1f softdrop, %5.1f pruned CHS\\n\",\n",
-    "            j.pt(), j.pt()*j.jecFactor(\"Uncorrected\"), j.eta(), j.mass(), j.userFloat(\"ak8PFJetsPuppiSoftDropMass\"), j.userFloat(\"ak8PFJetsCHSValueMap:ak8PFJetsCHSPrunedMass\") );\n",
-    "\n",
-    "        // To get the constituents of the AK8 jets, you have to loop over all of the\n",
-    "        // daughters recursively. To save space, the first two constituents are actually\n",
-    "        // the Soft Drop SUBJETS, which will then point to their daughters.\n",
-    "        // The remaining constituents are those constituents removed by soft drop but\n",
-    "        // still in the AK8 jet.\n",
-    "        std::vector<reco::Candidate const *> constituents;\n",
-    "        for ( unsigned ida = 0; ida < j.numberOfDaughters(); ++ida ) {\n",
-    "     reco::Candidate const * cand = j.daughter(ida);\n",
-    "     if ( cand->numberOfDaughters() == 0 )\n",
-    "       constituents.push_back( cand ) ;\n",
-    "     else {\n",
-    "       for ( unsigned jda = 0; jda < cand->numberOfDaughters(); ++jda ) {\n",
-    "         reco::Candidate const * cand2 = cand->daughter(jda);\n",
-    "         constituents.push_back( cand2 );\n",
-    "       }\n",
-    "     }\n",
-    "   }\n",
-    "   std::sort( constituents.begin(), constituents.end(), [] (reco::Candidate const * ida, reco::Candidate const * jda){return ida->pt() > jda->pt();} );\n",
-    "\n",
-    "   for ( unsigned int ida = 0; ida < constituents.size(); ++ida ) {\n",
-    "     const pat::PackedCandidate &cand = dynamic_cast<const pat::PackedCandidate &>(*constituents[ida]);\n",
-    "     printf(\"         constituent %3d: pt %6.2f, dz(pv) %+.3f, pdgId %+3d\\n\", ida,cand.pt(),cand.dz(PV.position()),cand.pdgId());\n",
-    "   }\n",
-    "\n",
-    "   auto sdSubjets = j.subjets(\"SoftDropPuppi\");\n",
-    "   for ( auto const & isd : sdSubjets ) {\n",
-    "     printf(\"  sd subjet with pt %5.1f (raw pt %5.1f), eta %+4.2f, mass %5.1f ungroomed\\n\",\n",
-    "       isd->pt(), isd->pt()*isd->jecFactor(\"Uncorrected\"), isd->eta(), isd->mass() );\n",
-    "\n",
-    "   }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "\n",
-    "//define this as a plug-in\n",
-    "DEFINE_FWK_MODULE(MiniAnalyzer);\n",
-    "```\n",
-    "\n",
-    "Then, you run your C script with a python configuration, through the cmsRun command:\n",
-    "\n",
-    "```python\n",
-    "import FWCore.ParameterSet.Config as cms\n",
-    "\n",
-    "process = cms.Process(\"Demo\")\n",
-    "\n",
-    "process.load(\"FWCore.MessageService.MessageLogger_cfi\")\n",
-    "process.maxEvents = cms.untracked.PSet( input = cms.untracked.int32(10)  )\n",
-    "\n",
-    "process.source = cms.Source(\"PoolSource\",\n",
-    "                            fileNames = cms.untracked.vstring(\n",
-    "                                        '/store/mc/RunIIAutumn18MiniAOD/QCD_HT1000to1500_TuneCP5_13TeV-madgraphMLM-pythia8/MINIAODSIM/102X_upgrade2018_realistic_v15-v1/210000/DA20DC21-E781-C540-9FCD-7BCF2144CA4E.root'\n",
-    "\n",
-    "                            )\n",
-    "                            )\n",
-    "\n",
-    "process.demo = cms.EDAnalyzer(\"MiniAnalyzer\",\n",
-    "                                  vertices = cms.InputTag(\"offlineSlimmedPrimaryVertices\"),\n",
-    "                                  jets = cms.InputTag(\"slimmedJets\"),\n",
-    "                                  fatjets = cms.InputTag(\"slimmedJetsAK8\")\n",
-    "                              )\n",
-    "\n",
-    "process.p = cms.Path(process.demo)\n",
-    "```\n",
-    "            \n",
-    "</p>\n",
-    "</details>"
-   ]
-  },
+    "Please take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/src/jmedas_miniAODAnalyzer.C` with your favourite code viewer.
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can run this code by using the python config file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest.py` from your terminal or in the next cell in this notebook. This script will only print out some information about the jets in that sample. Again, the most important part of this exercise is to get familiar with how to access jet collections from miniAOD."
+    "You can run this code by using the python config file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest.py` from your terminal. This script will only print out some information about the jets in that sample. Again, the most important part of this exercise is to get familiar with how to access jet collections from miniAOD. Take a good look at the prints this script produces to your terminal."
    ]
   },
   {
@@ -252,7 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "cmsRun $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest.py"
    ]
   },
@@ -262,130 +105,7 @@
    "source": [
     "##### In Python\n",
     "\n",
-    "If you are on the terminal, please take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest_purePython.py`.  The same code can be seen by clicking in the link below:\n",
-    "\n",
-    "<details>\n",
-    "    <summary><font color='blue'>SHOW CODE</font></summary>\n",
-    "<p>\n",
-    "\n",
-    "```python\n",
-    "# import ROOT in batch mode\n",
-    "import sys\n",
-    "oldargv = sys.argv[:]\n",
-    "sys.argv = [ '-b-' ]\n",
-    "import ROOT\n",
-    "ROOT.gROOT.SetBatch(True)\n",
-    "sys.argv = oldargv\n",
-    "\n",
-    "# load FWLite C++ libraries\n",
-    "ROOT.gSystem.Load(\"libFWCoreFWLite.so\");\n",
-    "ROOT.gSystem.Load(\"libDataFormatsFWLite.so\");\n",
-    "ROOT.FWLiteEnabler.enable()\n",
-    "\n",
-    "# load FWlite python libraries\n",
-    "from DataFormats.FWLite import Handle, Events\n",
-    "\n",
-    "jets, jetLabel = Handle(\"std::vector<pat::Jet>\"), \"slimmedJets\"\n",
-    "fatjets, fatjetLabel = Handle(\"std::vector<pat::Jet>\"), \"slimmedJetsAK8\"\n",
-    "vertices, vertexLabel = Handle(\"std::vector<reco::Vertex>\"), \"offlineSlimmedPrimaryVertices\"\n",
-    "verticesScore = Handle(\"edm::ValueMap<float>\")\n",
-    "seenIt = {} # list of things we've seen (so that we dump them in full only once)\n",
-    "\n",
-    "# open file (you can use 'edmFileUtil -d /store/whatever.root' to get the physical file name)\n",
-    "events = Events('root://cms-xrd-global.cern.ch//store/mc/RunIIAutumn18MiniAOD/QCD_HT1000to1500_TuneCP5_13TeV-madgraphMLM-pythia8/MINIAODSIM/102X_upgrade2018_realistic_v15-v1/210000/DA20DC21-E781-C540-9FCD-7BCF2144CA4E.root' )\n",
-    "\n",
-    "for iev,event in enumerate(events):\n",
-    "    if iev >= 10: break\n",
-    "    event.getByLabel(jetLabel, jets)\n",
-    "    event.getByLabel(fatjetLabel, fatjets)\n",
-    "    event.getByLabel(vertexLabel, vertices)\n",
-    "    event.getByLabel(vertexLabel, verticesScore)\n",
-    "\n",
-    "    print \"\\nEvent %d: run %6d, lumi %4d, event %12d\" % (iev,event.eventAuxiliary().run(), event.eventAuxiliary().luminosityBlock(),event.eventAuxiliary().event())\n",
-    "\n",
-    "    # Vertices\n",
-    "    if len(vertices.product()) == 0 or vertices.product()[0].ndof() < 4:\n",
-    "        print \"Event has no good primary vertex.\"\n",
-    "        continue\n",
-    "    else:\n",
-    "        PV = vertices.product()[0]\n",
-    "        print \"PV at x,y,z = %+5.3f, %+5.3f, %+6.3f, ndof: %.1f, score: (pt2 of clustered objects) %.1f\" % (PV.x(), PV.y(), PV.z(), PV.ndof(),verticesScore.product().get(0))\n",
-    "\n",
-    "\n",
-    "    # Jets (AK4, CHS and Puppi)\n",
-    "    for jetLabel, algo in (\"slimmedJets\", \"CHS\"), (\"slimmedJetsPuppi\", \"PUPPI\"):\n",
-    "        event.getByLabel(jetLabel, jets)\n",
-    "        for i,j in enumerate(jets.product()):\n",
-    "            if j.pt() < 20: continue\n",
-    "            print \"jet %s %3d: pt %5.1f (raw pt %5.1f, matched-calojet pt %5.1f), eta %+4.2f, btag CSVIVFv2 %.3f, CMVAv2 %.3f, pileup mva disc %+.2f\" % (\n",
-    "                algo, i, j.pt(), j.pt()*j.jecFactor('Uncorrected'), j.userFloat(\"caloJetMap:pt\") if algo == \"CHS\" else -99.0, j.eta(), max(0,j.bDiscriminator(\"pfCombinedInclusiveSecondaryVertexV2BJetTags\")), max(0,j.bDiscriminator(\"pfCombinedMVAV2BJetTags\")), j.userFloat(\"pileupJetId:fullDiscriminant\") if algo == \"CHS\" else -99)\n",
-    "            if 'jetAk4'+algo not in seenIt:\n",
-    "                constituents = [ j.daughter(i2) for i2 in xrange(j.numberOfDaughters()) ]\n",
-    "                constituents.sort(key = lambda c:c.pt(), reverse=True)\n",
-    "                for i2, cand in enumerate(constituents):\n",
-    "                    if i2 > 12:\n",
-    "                            print \"         .....\"\n",
-    "                            break\n",
-    "                    print \"         constituent %3d: pt %6.2f, dz(pv) %+.3f, pdgId %+3d, hcal energy fraction %.2f, puppi weight %.3f \" % (i2,cand.pt(),cand.dz(PV.position()),cand.pdgId(),cand.hcalFraction(),cand.puppiWeight())\n",
-    "                print \"   btag discriminators:\"\n",
-    "                for btag in j.getPairDiscri():\n",
-    "                    print  \"\\t%s %s\" % (btag.first, btag.second)\n",
-    "                print \"   userFloats:\"\n",
-    "                for ufl in j.userFloatNames():\n",
-    "                    print  \"\\t%s %s\" % (ufl, j.userFloat(ufl))\n",
-    "                seenIt['jetAk4'+algo] = True\n",
-    "\n",
-    "    # Fat AK8 Jets\n",
-    "    for i,j in enumerate(fatjets.product()):\n",
-    "        print \"jetAK8 %3d: pt %5.1f (raw pt %5.1f), eta %+4.2f, mass %5.1f ungroomed, %5.1f softdrop, %5.1f pruned CHS. \" % (\n",
-    "            i, j.pt(), j.pt()*j.jecFactor('Uncorrected'), j.eta(), j.mass(), j.userFloat('ak8PFJetsPuppiSoftDropMass'), j.userFloat('ak8PFJetsCHSValueMap:ak8PFJetsCHSPrunedMass'))\n",
-    "        # If you use CMSSW_9_4_<=6 to read MiniAOD, to get the constituents of the AK8 jets, you have to loop over all of the\n",
-    "        # daughters recursively. To save space, the first two constituents are actually\n",
-    "        # the Soft Drop SUBJETS, which will then point to their daughters.\n",
-    "        # The remaining constituents are those constituents removed by soft drop but\n",
-    "        # still in the AK8 jet.\n",
-    "        if 'jetAk8' not in seenIt:\n",
-    "            constituents = []\n",
-    "            for ida in xrange( j.numberOfDaughters() ) :\n",
-    "                cand = j.daughter(ida)\n",
-    "                if cand.numberOfDaughters() == 0 :\n",
-    "                    constituents.append( cand )\n",
-    "                else : # only needed in CMSSW_9_4_<=6\n",
-    "                    for jda in xrange( cand.numberOfDaughters() ) : # only needed in CMSSW_9_4_<=6\n",
-    "                        cand2 = cand.daughter(jda) # only needed in CMSSW_9_4_<=6\n",
-    "                        constituents.append( cand2 ) # only needed in CMSSW_9_4_<=6\n",
-    "            constituents.sort(key = lambda c:c.pt(), reverse=True)\n",
-    "            for i2, cand in enumerate(constituents):\n",
-    "                if i2 >4:\n",
-    "                            print \"         .....\"\n",
-    "                            break\n",
-    "                print \"         constituent %3d: pt %6.2f, pdgId %+3d, #dau %+3d\" % (i2,cand.pt(),cand.pdgId(), cand.numberOfDaughters())\n",
-    "            print \"   btag discriminators:\"\n",
-    "            for btag in j.getPairDiscri():\n",
-    "                print  \"\\t%s %s\" % (btag.first, btag.second)\n",
-    "            print \"   userFloats:\"\n",
-    "            for ufl in j.userFloatNames():\n",
-    "                print  \"\\t%s %s\" % (ufl, j.userFloat(ufl))\n",
-    "            seenIt['jetAk8'] = True\n",
-    "        # Print Subjets\n",
-    "        if 'jetAk8SD' not in seenIt:\n",
-    "            sdSubjets = j.subjets('SoftDropPuppi')\n",
-    "            for isd,sdsub in enumerate( sdSubjets ) :\n",
-    "                print \"   w subjet %3d: pt %5.1f (raw pt %5.1f), eta %+4.2f, mass %5.1f \" % (\n",
-    "                    isd, sdsub.pt(), sdsub.pt()*sdsub.jecFactor('Uncorrected'), sdsub.eta(), sdsub.mass()\n",
-    "                    )\n",
-    "                print \"   \\tbtag discriminators:\"\n",
-    "                for btag in sdsub.getPairDiscri():\n",
-    "                    print  \"\\t\\t%s %s\" % (btag.first, btag.second)\n",
-    "                print \"   \\tuserFloats:\"\n",
-    "                for ufl in sdsub.userFloatNames():\n",
-    "                    print  \"\\t\\t%s %s\" % (ufl, sdsub.userFloat(ufl))\n",
-    "                seenIt['jetAk8SD'] = True\n",
-    "\n",
-    "```\n",
-    "            \n",
-    "</p>\n",
-    "</details>\n",
+    "Now take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest_purePython.py`.,
     "\n",
     "This code can be run with simple python in your terminal. Similar as in the case for C++, the output of this job is some information about jets. The most important part of the exercise is to get familiar with how to access jet collections using python from miniAOD."
    ]
@@ -396,7 +116,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest_purePython.py"
    ]
   },
