--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -82,7 +82,8 @@
    "source": [
     "##### In C++\n",
     "\n",
-    "Please take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/src/jmedas_miniAODAnalyzer.C` with your favourite code viewer.
+    "Please take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/src/jmedas_miniAODAnalyzer.C` with your favourite code viewer."
+    ]
   {
    "cell_type": "markdown",
    "metadata": {},
