--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "##### In Python\n",
     "\n",
-    "Now take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest_purePython.py`.,
+    "Now take a look at the file `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_miniAODtest_purePython.py`.\n",
     "\n",
     "This code can be run with simple python in your terminal. Similar as in the case for C++, the output of this job is some information about jets. The most important part of the exercise is to get familiar with how to access jet collections using python from miniAOD."
    ]
