--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "In nanoAOD, only AK4 CHS jets ( _Jet_ ) and AK8 PUPPI jets ( _FatJet_ ) are stored. The jets in nanoAOD are similar to those in miniAOD, but not identical (for example, the $p_{\\mathrm{T}}$ cuts might be different). A full set of variables for each jet collection can be found in this [website](https://cms-nanoaod-integration.web.cern.ch/integration/master-102X/mc102X_doc.html).\n",
     "\n",
-    "NanoAOD is a \"flat tree\" format, meaning that you can access the information directly with simple ROOT, or even simple python tools (like numpy or pandas). This format is becoming more and more popular within CMS due to its simplicity and accesibility. An extremely simple example can be found in the next cell (or, if you're using the terminal, `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_nanoAODtest.py`). Try running this now.\n",
+    "NanoAOD is a \"flat tree\" format, meaning that you can access the information directly with simple ROOT, or even simple python tools (like numpy or pandas). This format is becoming more and more popular within CMS due to its simplicity and accesibility. An extremely simple example can be found below (or, if you prefer using your favorite editor, open `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_nanoAODtest.py`). Try running this now in your cmslpc session with python.\n",
     "\n",
     "*Aside*: there are several more advanced tools on the market which allow you to do more sophisticated analysis using nanoAOD format, including [RDataFrame](https://root.cern/doc/master/classROOT_1_1RDataFrame.html), [NanoAOD-tools](https://github.com/cms-nanoAOD/nanoAOD-tools), or [Coffea](https://github.com/CoffeaTeam/coffea). We excourage you to look at them and use the one you like the most."
    ]
@@ -198,7 +198,7 @@
     ")\n",
     "```\n",
     "\n",
-    "A full list of algorithms and parameters can be found in the [JetToolbox twiki](https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetToolbox#Arguments). A more complete example can be found in `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/ClusterWithToolboxAndMakeHistos.py`, or by clicking in the link below."
+    "A full list of algorithms and parameters can be found in the [JetToolbox twiki](https://twiki.cern.ch/twiki/bin/viewauth/CMS/JetToolbox#Arguments). Take a look at the more complete example in `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/ClusterWithToolboxAndMakeHistos.py`."
    ]
   },
   {
@@ -208,245 +208,6 @@
     "<details>\n",
     "    <summary><font color='blue'>SHOW CODE</font></summary>\n",
     "<p>\n",
-    "\n",
-    "```python\n",
-    "import FWCore.ParameterSet.Config as cms\n",
-    "###\n",
-    "### cmsRun ClusterWithToolboxAndPlot.py\n",
-    "###  make jet plots from miniAOD with some additional jet collections clustered\n",
-    "### Jet Algorithm HATS 2015 - Dolen, Rappoccio, Stupak\n",
-    "### Updated for Jet Algorithm HATS 2016 - Dolen, Pilot, Kries, Perloff, Tran\n",
-    "###\n",
-    "\n",
-    "\n",
-    "process = cms.Process(\"Ana\")\n",
-    "\n",
-    "### SETUP\n",
-    "process.load(\"FWCore.MessageService.MessageLogger_cfi\")\n",
-    "process.load(\"Configuration.EventContent.EventContent_cff\")\n",
-    "process.load('Configuration.Geometry.GeometryRecoDB_cff')\n",
-    "process.load('Configuration.StandardSequences.MagneticField_38T_cff')\n",
-    "process.load('Configuration.StandardSequences.Services_cff')\n",
-    "process.load('Configuration.StandardSequences.FrontierConditions_GlobalTag_condDBv2_cff')\n",
-    "process.GlobalTag.globaltag = '92X_upgrade2017_realistic_v1'\n",
-    "process.GlobalTag.globaltag = '94X_mc2017_realistic_v12'\n",
-    "process.options = cms.untracked.PSet( wantSummary = cms.untracked.bool(True) )\n",
-    "process.options.allowUnscheduled = cms.untracked.bool(True)\n",
-    "process.MessageLogger.cerr.FwkReport.reportEvery = 1000\n",
-    "\n",
-    "### INPUT\n",
-    "process.maxEvents = cms.untracked.PSet( input = cms.untracked.int32(100) )\n",
-    "\n",
-    "process.source = cms.Source(\"PoolSource\",\n",
-    "    fileNames = cms.untracked.vstring('/store/mc/RunIIAutumn18MiniAOD/TTJets_TuneCP5_13TeV-amcatnloFXFX-pythia8/MINIAODSIM/102X_upgrade2018_realistic_v15_ext1-v2/20000/7E65457A-87E5-C146-8321-9A48B4F56ED1.root'),\n",
-    ")\n",
-    "\n",
-    "#from PhysicsTools.PatAlgos.patInputFiles_cff import filesRelValTTbarPileUpMINIAODSIM\n",
-    "#process.source.fileNames = filesRelValTTbarPileUpMINIAODSIM\n",
-    "\n",
-    "btagDiscAK4 = [\n",
-    "            'pfCombinedInclusiveSecondaryVertexV2BJetTags',\n",
-    "            'pfCombinedCvsLJetTags',\n",
-    "            'pfCombinedCvsBJetTags',\n",
-    "            'pfDeepCSVJetTags:probb',\n",
-    "            'pfDeepCSVJetTags:probbb',\n",
-    "            'pfDeepCSVJetTags:probc',\n",
-    "            'pfDeepCSVJetTags:probudsg',\n",
-    "            'pfDeepFlavourJetTags:probb',\n",
-    "            'pfDeepFlavourJetTags:probbb',\n",
-    "            'pfDeepFlavourJetTags:problepb',\n",
-    "            'pfDeepFlavourJetTags:probc',\n",
-    "            'pfDeepFlavourJetTags:probuds',\n",
-    "            'pfDeepFlavourJetTags:probg',\n",
-    "        ]\n",
-    "\n",
-    "btagDiscAK8 = [\n",
-    "            'pfBoostedDoubleSecondaryVertexAK8BJetTags',\n",
-    "            #'pfMassIndependentDeepDoubleBvLJetTags:probQCD',\n",
-    "            #'pfMassIndependentDeepDoubleBvLJetTags:probHbb',\n",
-    "            #'pfMassIndependentDeepDoubleCvLJetTags:probQCD',\n",
-    "            #'pfMassIndependentDeepDoubleCvLJetTags:probHcc',\n",
-    "            #'pfMassIndependentDeepDoubleCvBJetTags:probHbb',\n",
-    "            #'pfMassIndependentDeepDoubleCvBJetTags:probHcc',\n",
-    "\t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:bbvsLight\",\n",
-    "\t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:ccvsLight\",\n",
-    "\t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:TvsQCD\",\n",
-    "\t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:ZHccvsQCD\",\n",
-    " \t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:WvsQCD\",\n",
-    " \t    \"pfMassDecorrelatedDeepBoostedDiscriminatorsJetTags:ZHbbvsQCD\"\n",
-    "            ]\n",
-    "\n",
-    "### ADD SOME NEW JET COLLECTIONS\n",
-    "from Analysis.JetToolbox.jetToolbox_cff import *\n",
-    "\n",
-    "# updating slimmedJets (ak4 CHS jets) from miniAOD\n",
-    "jetToolbox( process, 'ak4', 'ak4UpdJetSubs', 'noOutput',\n",
-    "        dataTier=\"miniAOD\",\n",
-    "        updateCollection='slimmedJets',\n",
-    "        JETCorrPayload='AK4PFchs',\n",
-    "        postFix='Updated',\n",
-    "        bTagDiscriminators=btagDiscAK4\n",
-    "        )\n",
-    "\n",
-    "# AK R=0.4 jets from CHS inputs\n",
-    "jetToolbox( process, 'ak4', 'ak4JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='CHS',\n",
-    "#  JETCorrPayload = 'AK4PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "  addPUJetID=True,\n",
-    "  addQGTagger=True,\n",
-    "  Cut='pt>30 && abs(eta)<2.5'\n",
-    ")\n",
-    "\n",
-    "# AK R=0.4 jets from Puppi inputs\n",
-    "jetToolbox( process, 'ak4', 'ak4JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='Puppi',\n",
-    "#  JETCorrPayload = 'AK4PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "  Cut='pt>30 && abs(eta)<2.5'\n",
-    ")\n",
-    "\n",
-    "# AK R=0.4 jets from PF inputs\n",
-    "jetToolbox( process, 'ak4', 'ak4JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='Plain',\n",
-    "#  JETCorrPayload = 'AK4PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "  Cut='pt>30 && abs(eta)<2.5'\n",
-    ")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# updating slimmedAK8Jets (ak8 puppi jets) from miniAOD\n",
-    "jetToolbox( process, 'ak8', 'ak8UpdJetSubs', 'noOutput',\n",
-    "        dataTier=\"miniAOD\",\n",
-    "        PUMethod='Puppi',\n",
-    "        updateCollection='slimmedJetsAK8',\n",
-    "        JETCorrPayload='AK8PFPuppi',\n",
-    "        postFix='Updated',\n",
-    "        bTagDiscriminators=btagDiscAK8\n",
-    "        )\n",
-    "\n",
-    "# AK R=0.8 jets from CHS\n",
-    "jetToolbox( process, 'ak8', 'ak8JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  PUMethod='CHS',\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  addTrimming=True, addFiltering=True,\n",
-    "  addSoftDropSubjets=True,\n",
-    "  addNsub=True, maxTau=4,                       # add Nsubjettiness tau1, tau2, tau3, tau4\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute'],\n",
-    ")\n",
-    "\n",
-    "# AK R=0.8 from PUPPI\n",
-    "jetToolbox( process, 'ak8', 'ak8JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='Puppi',\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  addTrimming=True, addFiltering=True,\n",
-    "  addSoftDropSubjets=True,\n",
-    "  addNsub=True, maxTau=4,                       # add Nsubjettiness tau1, tau2, tau3, tau4\n",
-    "  addEnergyCorrFunc=True,\n",
-    "  #JETCorrPayload = 'AK8PFPuppi', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "# CA R=0.8 jets from CHS\n",
-    "jetToolbox( process, 'ca8', 'ca8JetSubs', 'noOutput',\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='CHS',\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "# KT R=0.8 jets from CHS\n",
-    "jetToolbox( process, 'kt8', 'kt8JetSubs', 'noOutput',\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  PUMethod='CHS',\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "# KT R=0.8 jets from CHS\n",
-    "jetToolbox( process, 'kt8', 'kt8JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  PUMethod='CHS',\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "# AK R=0.8 jets from Puppi, modified Softdrop\n",
-    "jetToolbox( process, 'ak8', 'ak8JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  PUMethod='Puppi',\n",
-    "  postFix='modSD',\n",
-    "  addSoftDrop=True , betaCut=1,           # add basic grooming\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "# AK R=0.8 jets from SK\n",
-    "jetToolbox( process, 'ak8', 'ak8JetSubs', 'noOutput',\n",
-    "  dataTier=\"miniAOD\",\n",
-    "  Cut=\"pt>170 && abs(eta)<2.5\",\n",
-    "  PUMethod='SK',\n",
-    "  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    ")\n",
-    "\n",
-    "## AK R=0.8 jets from CS\n",
-    "#jetToolbox( process, 'ak8', 'ak8JetSubs', 'noOutput',\n",
-    "#  PUMethod='CS',\n",
-    "#  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "#  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "#)\n",
-    "\n",
-    "# CA R=1.2 jets from CHS inputs with basic grooming, W tagging, and top tagging\n",
-    "#jetToolbox( process, 'ca12', 'ca12JetSubs', 'noOutput',\n",
-    "#  PUMethod='CHS',\n",
-    "#  addHEPTopTagger=True,\n",
-    "#)\n",
-    "\n",
-    "\n",
-    "## AK R=1.2 jets from CHS inputs with basic grooming, W tagging, and top tagging\n",
-    "#jetToolbox( process, 'ak12', 'ak12JetSubs', 'noOutput',\n",
-    "#  PUMethod='CHS',\n",
-    "#  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "#  addTrimming=True, addFiltering=True,\n",
-    "#  addSoftDropSubjets=True,\n",
-    "#  addNsub=True, maxTau=4,                       # add Nsubjettiness tau1, tau2, tau3, tau4\n",
-    "#  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "#)\n",
-    "#\n",
-    "## AK R=1.5 jets from CHS inputs with basic grooming, W tagging, and top tagging\n",
-    "#jetToolbox( process, 'ak15', 'ak15JetSubs', 'noOutput',\n",
-    "#  PUMethod='CHS',\n",
-    "#  addPruning=True, addSoftDrop=True ,           # add basic grooming\n",
-    "#  addTrimming=True, addFiltering=True,\n",
-    "#  addSoftDropSubjets=True,\n",
-    "#  addNsub=True, maxTau=4,                       # add Nsubjettiness tau1, tau2, tau3, tau4\n",
-    "#  JETCorrPayload = 'AK8PFchs', JETCorrLevels = ['L2Relative', 'L3Absolute']\n",
-    "#)\n",
-    "\n",
-    "### MAKE SOME HISTOGRAMS\n",
-    "process.ana = cms.EDAnalyzer('JetTester'\n",
-    ")\n",
-    "\n",
-    "### OUT\n",
-    "process.TFileService = cms.Service(\"TFileService\",\n",
-    "      fileName = cms.string(\"JetClusterHistos_ZP3.root\"),\n",
-    "      closeFileFast = cms.untracked.bool(True)\n",
-    "  )\n",
-    "\n",
-    "process.p = cms.Path(process.ana)\n",
-    "\n",
-    "```\n",
-    "            \n",
-    "</p>\n",
-    "</details>\n",
     "\n",
     "Now you can run the script in your terminal, or in the next cell to create a bunch of new jet collections:"
    ]
