--- a/notebooks/master/Jets_in_CMS.ipynb
+++ b/notebooks/master/Jets_in_CMS.ipynb
@@ -215,7 +215,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "cmsRun $CMSSW_BASE/src/Analysis/JMEDAS/scripts/ClusterWithToolboxAndMakeHistos.py"
    ]
   },
@@ -320,7 +319,7 @@
     "\n",
     "This file is already included in this tutorial. _Do not try to copy this file in your working directory._\n",
     "\n",
-    "Then to create a nanoAOD-like file, run the next line in your terminal, or in the next cell. "
+    "Then to create a nanoAOD-like file, run the next line in your terminal."
    ]
   },
   {
@@ -329,7 +328,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "cmsDriver.py nanoAOD_jetToolbox_cff -s NANO --mc --eventcontent NANOAODSIM --datatier NANOAODSIM -n 100  --conditions 102X_upgrade2018_realistic_v20 --era Run2_2018,run2_nanoAOD_102Xv1 --customise_commands=\"process.add_(cms.Service('InitRootHandlers', EnableIMT = cms.untracked.bool(False)))\" --customise Analysis/JMEDAS/nanoAOD_jetToolbox_cff.nanoJTB_customizeMC --filein /store/mc/RunIIAutumn18MiniAOD/QCD_HT1000to1500_TuneCP5_13TeV-madgraphMLM-pythia8/MINIAODSIM/102X_upgrade2018_realistic_v15-v1/210000/DA20DC21-E781-C540-9FCD-7BCF2144CA4E.root --fileout file:jetToolbox_nano_mc.root"
    ]
   },
