--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -29,31 +29,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### RUN THIS CELL ONLY IF YOU ARE USING SWAN \n",
-    "import os\n",
-    "\n",
-    "##### REMEMBER TO MANUALLY COPY THE PROXY TO YOUR CERNBOX FOLDER AND TO MODIFY THE NEXT LINE\n",
-    "os.environ['X509_USER_PROXY'] = '{}/x509up_u0000'.format(os.environ[\"HOME\"])\n",
-    "if os.path.isfile(os.environ['X509_USER_PROXY']): \n",
-    "    print(\"Found proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
-    "else: \n",
-    "    print(\"Failed to find proxy at {}\".format(os.environ['X509_USER_PROXY']))\n",
-    "os.environ['X509_CERT_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/certificates'\n",
-    "os.environ['X509_VOMS_DIR'] = '/cvmfs/cms.cern.ch/grid/etc/grid-security/vomsdir'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The code we will use `$CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py` is a python-based script accessing miniAOD information. Additionally, the code also fills different histograms that we will compare in the next steps of the tutorial. \n",
     "\n",
-    "The content of the script can be seen [here](https://github.com/cms-jet/JMEDAS/blob/DASSep2020/scripts/jmedas_make_histograms.py). The code will take several minutes to run, so you can launch the script first, and read the script while the code is running."
+    "The content of the script can be seen [here](https://github.com/cms-jet/JMEDAS/blob/DASSep2020/scripts/jmedas_make_histograms.py). The code will take several minutes to run, so you can launch the script first, and read the script while the code is running. You have probably already looked into this script in the previous exercises. Now execute the following commands in your cmslpc ssh session:"
    ]
   },
   {
@@ -62,7 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/rsgluon_ttbar_3000GeV.txt \\\n",
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/rsgluon_ttbar_3000GeV.root \\\n",
@@ -83,21 +63,6 @@
     "    --maxjets=4 \\\n",
     "    --maxFiles 2 \\\n",
     "    --matchPdgIdAK8 24 0.8    \n",
-    "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
-    "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt \\\n",
-    "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root \\\n",
-    "    --maxevents=2000 \\\n",
-    "    --maxjets=4 \\\n",
-    "    --maxFiles 2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
     "python $CMSSW_BASE/src/Analysis/JMEDAS/scripts/jmedas_make_histograms.py \\\n",
     "    --files=$CMSSW_BASE/src/Analysis/JMEDAS/data/MiniAODs/RunIIFall17MiniAODv2/QCD_Pt_470to600.txt \\\n",
     "    --outname=$CMSSW_BASE/src/Analysis/JMEDAS/notebooks/files/QCD_Pt_470to600.root \\\n",
