--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "## Grooming and PU removal algorithms\n",
     "\n",
-    "Now, let's compare the jet masses for ungroomed, pruned, soft drop (SD), PUPPI, and SD+PUPPI:"
+    "Now, let's compare the jet masses for ungroomed, pruned, soft drop (SD), PUPPI, and SD+PUPPI. Execute the below script with the file 'jet_substructure_part1.py' in your working directory section4 and open the produced plot."
    ]
   },
   {
@@ -143,8 +143,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the previous plot is interactive. Click on it or move your mouse to zoom in or out.\n",
-    "\n",
     "<details>\n",
     "<summary>\n",
     "    <font color='blue'>The histogram should look like this:</font>\n",
@@ -160,7 +158,7 @@
    "source": [
     "# Substructure Variables\n",
     "\n",
-    "Now, let's compare the different subtructure variables between two different samples. Using the histograms that you created in the previous steps, the next cell is just a function to create comparison plots."
+    "Now, let's compare the different subtructure variables between two different samples. Using the histograms that you created in the previous steps, the next script contains just a function to create comparison plots."
    ]
   },
   {
@@ -239,7 +237,7 @@
    "source": [
     "Let's start with n-subjetiness ratios. The variable $\\tau_N$ gives a sense of how many N prongs or cores can be find inside the jet. It is known that the n-subjetiness variables itself ($\\tau_{N}$) do not provide good discrimination power, but its ratios do. Then, a $\\tau_{MN} = \\dfrac{\\tau_M}{\\tau_N}$ basically tests if the jet is more M-prong compared to N-prong. For instance, we expect 2 prongs for boosted jets originated from hadronic Ws, while we expect 1 prongs for high-pt jets from QCD multijet processes.\n",
     "\n",
-    "Let's compare one of the most common nsubjetiness ratio $\\tau_{21}$:"
+    "Let's compare one of the most common nsubjetiness ratio $\\tau_{21}$. Add the following function call to the end of compare_histograms.py and run the script with python. We'll now use interactive ROOT plotting, but you can always change the last Draw() command to Print('filename.pdf','pdf') if you want the plot saved."
    ]
   },
   {
