--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -145,7 +145,7 @@
    "source": [
     "<details>\n",
     "<summary>\n",
-    "    <font color='blue'>The histogram should look like this:</font>\n",
+    "    <font color='blue'>The histogram should look roughly like this (but with added normalization):</font>\n",
     "</summary>\n",
     "<img src=\"../files/ex5_rsg_jetmass.png\" width=400px/>\n",
     "</details>\n",
