--- a/notebooks/master/Jet_Substructure.ipynb
+++ b/notebooks/master/Jet_Substructure.ipynb
@@ -87,7 +87,6 @@
    "outputs": [],
    "source": [
     "import ROOT\n",
-    "%jsroot off\n",
     "\n",
     "ROOT.gStyle.SetOptStat(0)\n",
     "ROOT.gStyle.SetOptTitle(0)\n",
@@ -237,7 +236,7 @@
    "source": [
     "Let's start with n-subjetiness ratios. The variable $\\tau_N$ gives a sense of how many N prongs or cores can be find inside the jet. It is known that the n-subjetiness variables itself ($\\tau_{N}$) do not provide good discrimination power, but its ratios do. Then, a $\\tau_{MN} = \\dfrac{\\tau_M}{\\tau_N}$ basically tests if the jet is more M-prong compared to N-prong. For instance, we expect 2 prongs for boosted jets originated from hadronic Ws, while we expect 1 prongs for high-pt jets from QCD multijet processes.\n",
     "\n",
-    "Let's compare one of the most common nsubjetiness ratio $\\tau_{21}$. Add the following function call to the end of compare_histograms.py and run the script with python. We'll now use interactive ROOT plotting, but you can always change the last Draw() command to Print('filename.pdf','pdf') if you want the plot saved."
+    "Let's compare one of the most common nsubjetiness ratio $\\tau_{21}$. Add the following function call to the end of compare_histograms.py and run the script with python. Open the produced plot with evince."
    ]
   },
   {
@@ -257,7 +256,7 @@
    "source": [
     "What can you say about the two histograms? Is $\\tau_{21}$ telling you something about the nature of the boosted jets selected?\n",
     "\n",
-    "Let's compare now $\\tau_{32}$:"
+    "Let's compare now $\\tau_{32}$. Modify the function call in the script and change the pdf file name if you don't want to overwrite the plot from the previous step."
    ]
   },
   {
